[tool.poetry]
name = "pubs"
version = "0.1.0"
description = ""
authors = ["Stefans Mezulis <stefans.mezulis@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pubs", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
osmium = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
